# stm32_rust_i2c_general

./: Cargo.toml  memory.x  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
src/: blinky.rs  bme680.rs  bme680_example.rs  bme680_read.rs  chip.rs  chip_map.rs  chip_read.rs  i2c_scan.rs  led.rs  lib.rs
src/lib/: bme680.rs  chip.rs
