[package]
edition = "2024"
name = "blinky"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
# embedded-hal = "0.2.6"
panic-reset = "0.1"

rtt-target = { version = "0.6.0", features = ["log"] }
log = "0.4"

stm32h7xx-hal = { version = "0.16", features = ["can", "ethernet", "stm32h735", "rt"] } # 735 covers 723
