[package]
edition = "2024"
name = "blinky"

[[bin]]
name = "blinky"
path = "src/blinky.rs"

[[bin]]
name = "i2c_scan"
path = "src/i2c_scan.rs"

[[bin]]
name = "bme680_example"
path = "src/bme680_example.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
# embedded-hal = "0.2.6"
panic-reset = "0.1"
embedded-hal = "0.2.7"
phf = { version = "0.11", default-features = false }
phf_macros = { version = "0.11", default-features = false }  # Perfect Hash Functions (PHF) table for register lookup
shared-bus = "0.3"  # Shared I2C buss

rtt-target = { version = "0.6.0", features = ["log"] }
log = "0.4"

stm32h7xx-hal = { version = "0.16", features = ["can", "ethernet", "stm32h735", "rt"] } # 735 covers 723
