[package]
edition = "2024"
name = "rust_general"

[[bin]]
name = "blinky"
path = "src/blinky.rs"

[[bin]]
name = "i2c_scan"
path = "src/i2c_scan.rs"

[[bin]]
name = "chip_read"
path = "src/chip_read.rs"

[[bin]]
name = "bme680_read"
path = "src/bme680_read.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# HAL and MCU
stm32h7xx-hal = { version = "0.16", features = ["can", "ethernet", "stm32h735", "rt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# Debugging and Logging
rtt-target = { version = "0.6.0", features = ["log"] }
log = "0.4"

# Embedded Utilities
embedded-hal = "0.2.7"
shared-bus = "0.3"
heapless = "0.8"
panic-reset = "0.1"

# Lookup Tables
phf = { version = "0.11", default-features = false }
phf_macros = { version = "0.11", default-features = false }